--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.4.5",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
