--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-tag-input": "^6.8.1",
+    "react-tagsinput": "^3.20.3",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
