--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "react-tag-input": "^6.8.1",
     "react-tagsinput": "^3.20.3",
     "react-toastify": "^9.1.3",
