--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "date-fns": "^3.2.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.4.5",
     "history": "^5.3.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dnd": "^16.0.1",
