--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.4",
+    "react-date-picker": "^10.6.0",
+    "react-datepicker": "^5.0.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
