--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@react-pdf/renderer": "^3.3.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "env-cmd": "^10.1.0",
     "formik": "^2.4.5",
     "history": "^5.3.0",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.4",
@@ -27,6 +29,7 @@
     "react-spinners": "^0.13.8",
     "react-tag-input": "^6.8.1",
     "react-tagsinput": "^3.20.3",
+    "react-to-pdf": "^1.0.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
