--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.5",
     "history": "^5.3.0",
     "html2canvas": "^1.4.1",
+    "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
