--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "blob": "^0.1.0",
     "chart.js": "^4.4.1",
     "date-fns": "^3.2.0",
+    "docx": "^8.5.0",
+    "docxtemplater": "^3.46.0",
     "env-cmd": "^10.1.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.5",
     "history": "^5.3.0",
+    "html-docx-js": "^0.3.1",
+    "html-to-docx": "^1.8.0",
     "html2canvas": "^1.4.1",
     "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "moment": "^2.30.1",
+    "path-browserify": "^1.0.1",
+    "pizzip": "^3.1.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.4",
@@ -37,6 +45,7 @@
     "react-tagsinput": "^3.20.3",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^9.1.3",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
