--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "github:fortawesome/react-fontawesome",
+    "@material-ui/core": "^5.0.0-beta.5",
     "@react-icons/all-files": "^4.1.0",
     "@react-pdf/renderer": "^3.3.8",
     "@testing-library/jest-dom": "^5.17.0",
