--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-tagsinput": "^3.20.3",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^9.1.3",
+    "to-words": "^4.0.1",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
