--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "scripts": {
     "start": "env-cmd -f .env react-scripts start",
     "build:staging": "env-cmd -f .env react-scripts build",
-    "build:production": "env-cmd -f .env react-scripts build",
+    "build:production": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
