--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
-  "scripts": {
-    "start": "env-cmd -f .env react-scripts start",
-    "build:staging": "env-cmd -f .env react-scripts build",
-    "build:production": "env-cmd -f .env.production react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+ "scripts": {
+  "start": "env-cmd -f .env.development react-scripts start",
+  "build": "env-cmd -f .env.production react-scripts build",
+  "build:dev": "env-cmd -f .env.development react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
