--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.6.2",
     "blob": "^0.1.0",
     "chart.js": "^4.4.1",
-    "date-fns": "^3.2.0",
+    "date-fns": "^3.6.0",
     "docx": "^8.5.0",
     "docxtemplater": "^3.46.0",
     "env-cmd": "^10.1.0",
@@ -30,10 +30,11 @@
     "moment": "^2.30.1",
     "path-browserify": "^1.0.1",
     "pizzip": "^3.1.6",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.4",
     "react-date-picker": "^10.6.0",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^5.0.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
@@ -52,13 +53,13 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
- "scripts": {
-  "start": "env-cmd -f .env.development react-scripts start",
-  "build": "env-cmd -f .env.production react-scripts build",
-  "build:dev": "env-cmd -f .env.development react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+  "scripts": {
+    "start": "env-cmd -f .env.development react-scripts start",
+    "build": "env-cmd -f .env.production react-scripts build",
+    "build:dev": "env-cmd -f .env.development react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
