--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-tagsinput": "^3.20.3",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.26.4",
     "to-words": "^4.0.1",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
