--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
-#  REACT_APP_API_KEY_LOCAL=https://api.demo.codewarranty.com/api-v1
+# REACT_APP_API_KEY_LOCAL=https://api.demo.codewarranty.com/api-v1
 REACT_APP_API_KEY_LOCAL=http://54.176.118.28:3002/api-v1
+# REACT_APP_API_KEY_LOCAL=http://98.82.228.50:3002/api-v1
